--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div id="quiz-container">
         <form method="POST" name="instantquiz">
             <table border="0" width="100%" cellspacing="0" cellpadding="0">
-                <caption><strong>JavaScript Kit Pop Quiz</strong></caption>
+                <caption><strong>Health & Nutrition Pop Quiz</strong></caption>
                 <tr>
                     <td width="100%"><textarea rows="10" name="thequestion" cols="69" wrap="virtual"></textarea></td>
                 </tr>
