--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </select>
                         <input type="button" value="&lt;&lt;Back" name="B1" onClick="if (whichone&gt;1){whichone--;generatequestions()}">
                         <input type="button" value="Next&gt;&gt;" name="B2" onClick="if (whichone&lt;=total){whichone++;generatequestions()}">
-                        <small><a href="#" onClick="whichone=1;generatequestions();return false">Start Over</a> </small><input type="checkbox" name="cmode" value="ON"><small>Cheat Mode</small>
+                        <small><a href="#" onClick="whichone=1;generatequestions();return false">Start Over</a> </small><small><input type="checkbox" name="cmode" value="ON">Cheat Mode</small>
                     </td>
                 </tr>
             </table>
